# Clip-Engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  HANDOFF.md  MASTER_SPEC.md  Makefile  PLAN.md  POSTIZ_API.md  README.md  SPEC.md  alembic.ini  pyproject.toml  railway.json
campaigns/: fitness.yaml  peptides.yaml
core/: apify.py  config.py  db.py  fewshot.py  hook_style.py  llm.py  logging.py  modal_costs.py  models.py  preferences.py  punctuate.py  r2.py  sentences.py  settings.py  storage.py  topics.py
deploy/: Dockerfile.web  Dockerfile.worker  crontab  crontab.md  railway.md  start.sh
docs/: APIFY_COSTS.md  CLIP_QUALITY_FIX_SPEC.md  HOOK_CAPITALISATION.md  PIPELINE_QUEUE_CONTRACTS.md  REVAMP_CONTRACTS.md
meme/: __init__.py  _client.py  _storage.py  classifier.py  feedback.py  generate.py  image_client.py  profile.py  run.py  text_posts.py
migrations/: env.py
producer/: __init__.py  boundary_check.py  comments.py  dedupe.py  discover.py  download.py  ranker.py  render_dispatch.py  review_gate.py  run.py  transcripts.py
render/: __init__.py  asd.py  modal_app.py  reframe.py
scheduler/: analytics.py  postiz.py  schedule.py
scripts/: eval_segmentation.py  healthcheck.py  purge_clips.py  rebuild_profile.py  regate.py  smoke.py  upload_hero.py
style_refs/: REFERENCE_TEMPLATE.md
tests/: test_apify_outage_resilience.py  test_apify_spend.py  test_boundary_check.py  test_captions.py  test_config.py  test_dedupe.py  test_discovery_exclusion.py  test_download_retry.py  test_ensure_campaign.py  test_eval_segmentation.py  (+30 more)
(+36 files in other folders)
