[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clip_engine"
version = "0.1.0"
description = "Niche-agnostic clip-and-schedule system for logo campaigns at scale"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "psycopg2-binary",
    "pydantic>=2",
    "pydantic-settings",
    "pyyaml",
    "apify-client",
    "yt-dlp",
    "httpx",
    "anthropic",
    "faster-whisper",
    "opencv-python-headless",
    "mediapipe",
    "pillow",
    "python-multipart",
    "jinja2",
    "boto3",
    "modal",
    "punctuators",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "producer*",
    "scheduler*",
    "web*",
    "meme*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
